--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Edge TTS - Генератор аудіо</title>
-    <link rel="stylesheet" href="style.css?v=1754637288181">
+    <link rel="stylesheet" href="style.css?v=1754643407324">
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
     <meta http-equiv="Pragma" content="no-cache">
     <meta http-equiv="Expires" content="0">
@@ -380,12 +380,16 @@
                 
                 <div id="status" class="status"></div>
                 <div id="eta" class="eta"></div>
+                <div id="chunk-progress" class="progress" style="display:none;">
+                    <div id="chunk-progress-bar" class="progress-bar" style="width:0%"></div>
+                </div>
+                <div id="chunk-progress-label" class="progress-label" style="display:none;"></div>
             </div>
         </div>
     </div>
     
     <script src="text-processor.js?v=1754591729366"></script>
-    <script src="edge-tts.js?v=1754637288181"></script>
-    <script src="main.js?v=1754637288181"></script>
+    <script src="edge-tts.js?v=1754643407324"></script>
+    <script src="main.js?v=1754643407324"></script>
 </body>
 </html>
